--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -42,14 +42,14 @@
 
         <Button
             android:id="@+id/gamesB"
-            android:text="Games"
+            android:text="@string/games"
             android:letterSpacing="0.05"
             style="@style/NavigationButton"
             android:onClick="handleGamesButtonClick" />
 
         <Button
             android:id="@+id/settingsB"
-            android:text="SETTINGS"
+            android:text="@string/settings"
             style="@style/NavigationButton"
             android:onClick="handleSettingsButtonClick" />
 
@@ -61,10 +61,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
-        android:text="@string/title_name"
+        android:text="@string/title"
         android:textSize="55sp"
         android:letterSpacing="0.1"
-        android:textColor="@color/beige"
+        android:textColor="@color/background"
         android:textAppearance="@style/funky_font"
         android:onClick="handlePlayBox" />
 
@@ -128,7 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Confirm exit?"
+            android:text="@string/confirm_exit"
             android:textSize="30sp"
             android:textAppearance="@style/default_font"
             android:textColor="@color/beige" />
@@ -143,10 +143,10 @@
             <Button
                 android:id="@+id/noExitB"
                 android:tag="no"
-                android:background="@drawable/exitno"
+                android:background="@drawable/exit_no"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:text="NO"
+                android:text="@string/no"
                 android:textSize="25sp"
                 android:textColor="@color/beige"
                 android:textAppearance="@style/default_font"
@@ -159,7 +159,7 @@
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
-                android:text="YES"
+                android:text="@string/yes"
                 android:textSize="25sp"
                 android:textColor="@color/beige"
                 android:textAppearance="@style/default_font"
