--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -41,14 +41,15 @@
     <ImageView
         android:id="@+id/backIconIV"
         style="@style/BackImageView"
-        android:onClick="goBack" />
+        android:onClick="goBack"
+        android:contentDescription="@string/image_description" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:text="Change Settings"
+        android:text="@string/change_settings"
         android:textSize="30sp"
         android:textColor="@color/beige"
         android:textAppearance="@style/default_font" />
