--- a/app/src/main/res/layout/tictactoeai_layout.xml
+++ b/app/src/main/res/layout/tictactoeai_layout.xml
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:text="@string/you"
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:textColor="@color/background"
                     android:textAppearance="@style/default_font"/>
 
@@ -55,7 +55,7 @@
                     android:layout_height="50dp"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@+id/playerOneNameTV"
-                    android:text="X"
+                    android:text="@string/X"
                     android:textSize="35sp"
                     android:textColor="@color/background"
                     android:gravity="center"
@@ -67,8 +67,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@+id/playerOneSymbolTV"
-                    android:text="Score: 0"
-                    android:textSize="12dp"
+                    android:text="@string/initial_score"
+                    android:textSize="12sp"
                     android:textColor="@color/background"
                     android:textAppearance="@style/default_font"/>
 
@@ -97,8 +97,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:text="AI"
-                    android:textSize="12dp"
+                    android:text="@string/ai"
+                    android:textSize="12sp"
                     android:textColor="@color/background"
                     android:textAppearance="@style/default_font"/>
 
@@ -108,7 +108,7 @@
                     android:layout_height="50dp"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@+id/playerTwoNameTV"
-                    android:text="O"
+                    android:text="@string/O"
                     android:textSize="35sp"
                     android:textColor="@color/background"
                     android:gravity="center"
@@ -120,8 +120,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@+id/playerTwoSymbolTV"
-                    android:text="Score: 0"
-                    android:textSize="12dp"
+                    android:text="@string/initial_score"
+                    android:textSize="12sp"
                     android:textColor="@color/background"
                     android:textAppearance="@style/default_font"/>
 
@@ -145,7 +145,8 @@
             android:layout_row="0"
             android:layout_column="0"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
         <Button
             android:id="@+id/gameBoard1B"
@@ -153,7 +154,8 @@
             android:layout_row="0"
             android:layout_column="1"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
         <Button
             android:id="@+id/gameBoard2B"
@@ -161,7 +163,8 @@
             android:layout_row="0"
             android:layout_column="2"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
         <Button
             android:id="@+id/gameBoard3B"
@@ -169,7 +172,8 @@
             android:layout_row="1"
             android:layout_column="0"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
         <Button
             android:id="@+id/gameBoard4B"
@@ -177,7 +181,8 @@
             android:layout_row="1"
             android:layout_column="1"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
         <Button
             android:id="@+id/gameBoard5B"
@@ -185,7 +190,8 @@
             android:layout_row="1"
             android:layout_column="2"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description"/>
 
         <Button
             android:id="@+id/gameBoard6B"
@@ -193,7 +199,8 @@
             android:layout_row="2"
             android:layout_column="0"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
         <Button
             android:id="@+id/gameBoard7B"
@@ -201,7 +208,8 @@
             android:layout_row="2"
             android:layout_column="1"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
         <Button
             android:id="@+id/gameBoard8B"
@@ -209,7 +217,8 @@
             android:layout_row="2"
             android:layout_column="2"
             style="@style/BoardButton"
-            android:onClick="handleBoardClick" />
+            android:onClick="handleBoardClick"
+            android:contentDescription="@string/button_description" />
 
     </GridLayout>
 
@@ -217,19 +226,22 @@
     <ImageView
         android:id="@+id/backIconIV"
         style="@style/BackImageView"
-        android:onClick="goBack" />
+        android:onClick="goBack"
+        android:contentDescription="@string/image_description" />
 
     <!-- Home ImageView -->
     <ImageView
         android:id="@+id/homeIconIV"
         style="@style/HomeImageView"
-        android:onClick="goToHome" />
+        android:onClick="goToHome"
+        android:contentDescription="@string/image_description" />
 
     <!-- Setting ImageView -->
     <ImageView
         android:id="@+id/settingIconIV"
         style="@style/SettingImageView"
-        android:onClick="goToSetting" />
+        android:onClick="goToSetting"
+        android:contentDescription="@string/image_description" />
 
     <!--Difficulty RelativeLayout-->
     <RelativeLayout
@@ -249,7 +261,8 @@
             android:layout_centerHorizontal="true"
             android:src="@drawable/difficulty"
             android:gravity="center"
-            android:onClick="difficultyClicked" />
+            android:onClick="difficultyClicked"
+            android:contentDescription="@string/image_description"/>
 
         <TextView
             android:id="@+id/difficultyTooltipTV"
@@ -275,8 +288,9 @@
         android:layout_height="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginStart="64dp"
-        android:src="@drawable/switchicon"
-        android:onClick="handleSwitchClick"/>
+        android:src="@drawable/switch_icon"
+        android:onClick="handleSwitchClick"
+        android:contentDescription="@string/image_description"/>
 
     <!--Replay TextView-->
     <TextView
@@ -286,7 +300,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="100dp"
-        android:text="Replay"
+        android:text="@string/replay"
         android:textSize="50sp"
         android:textColor="@color/beige"
         android:textAppearance="@style/default_font"
@@ -307,7 +321,7 @@
 
     <!--GameDraw ImageView-->
     <ImageView
-        android:contentDescription="@string/imageDescription"
+        android:contentDescription="@string/image_description"
         android:id="@+id/drawIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
