--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -69,6 +69,7 @@
         android:onClick="handlePlayBox" />
 
     <TextView
+        android:id="@+id/creatorTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvPlayBox"
