--- a/app/src/main/res/layout/tictactoeai_layout.xml
+++ b/app/src/main/res/layout/tictactoeai_layout.xml
@@ -6,16 +6,9 @@
     android:background="@color/background">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lavBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/background_stars"
-        android:scaleType="centerCrop"
-        app:lottie_asyncUpdates="enabled"
-        app:lottie_cacheComposition="true"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true" />
+        app:lottie_rawRes="@raw/lottie_stars_background"
+        style="@style/BackgroundLottieAnimation"
+        />
 
     <RelativeLayout
         android:layout_width="300dp"
@@ -311,7 +304,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/fireworks"
+        app:lottie_rawRes="@raw/lottie_fireworks"
         app:lottie_loop="true"/>
 
     <!--Shadow View-->
