--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -8,16 +8,9 @@
     android:background="@color/background">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lavBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/background_stars"
-        android:scaleType="centerCrop"
-        app:lottie_asyncUpdates="enabled"
-        app:lottie_cacheComposition="true"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true" />
+        app:lottie_rawRes="@raw/lottie_stars_background"
+        style="@style/BackgroundLottieAnimation"
+        />
 
     <!-- Flame AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
@@ -27,7 +20,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="-10dp"
         android:layout_marginEnd="50dp"
-        app:lottie_rawRes="@raw/flame"
+        app:lottie_rawRes="@raw/lottie_flame"
         app:lottie_loop="true"
         android:visibility="gone"/>
 
@@ -482,7 +475,7 @@
         android:layout_height="150dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dp"
-        app:lottie_rawRes="@raw/blast"
+        app:lottie_rawRes="@raw/lottie_blast"
         android:visibility="gone"/>
 
     <!-- Skip AnimationView -->
@@ -491,7 +484,7 @@
         android:layout_width="match_parent"
         android:layout_height="340dp"
         android:layout_alignBottom="@+id/gridLayout"
-        app:lottie_rawRes="@raw/skip_animation" />
+        app:lottie_rawRes="@raw/lottie_skip" />
 
     <!-- Coin Blast AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
@@ -499,7 +492,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:lottie_rawRes="@raw/coin_blast_animation"
+        app:lottie_rawRes="@raw/lottie_coin_blast"
         android:visibility="gone"/>
 
     <!-- Back ImageView -->
@@ -954,7 +947,5 @@
             android:onClick="handleShopButtons"/>
 
     </RelativeLayout>
-
-
 
 </RelativeLayout>
