--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -4,19 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background">
 
+    <!-- Background AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lavBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/background_stars"
-        android:scaleType="centerCrop"
-        app:lottie_asyncUpdates="enabled"
-        app:lottie_cacheComposition="true"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true" />
+        app:lottie_rawRes="@raw/lottie_stars_background"
+        style="@style/BackgroundLottieAnimation" />
 
-    <!--Grid LL-->
+    <!-- Grid LL -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,49 +25,6 @@
 
     </LinearLayout>
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/explosionLAV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/puzzle_explosion_animation"
-        app:lottie_asyncUpdates="enabled"
-        app:lottie_cacheComposition="true"
-        android:visibility="gone"/>
-
-    <!-- Skip AnimationView -->
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/skipLAV"
-        android:layout_width="match_parent"
-        android:layout_height="340dp"
-        android:layout_centerInParent="true"
-        app:lottie_speed="2"
-        app:lottie_rawRes="@raw/skip_animation" />
-
-    <!--CurrentScore View-->
-    <TextView
-        android:id="@+id/currentScoreTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:text="@string/initial_score"
-        android:textSize="40sp"
-        android:textAppearance="@style/default_font"
-        android:textColor="@color/beige"/>
-
-    <!--BestScore View-->
-    <TextView
-        android:id="@+id/bestScoreTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/currentScoreTV"
-        android:text="@string/initial_best_score"
-        android:textSize="15sp"
-        android:textAppearance="@style/default_font"
-        android:textColor="@color/beige"/>
-
     <!--Heart LL-->
     <LinearLayout
         android:id="@+id/heartLL"
@@ -86,31 +36,80 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/heartOneLAV"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:lottie_rawRes="@raw/heartbreak"
-            app:lottie_asyncUpdates="enabled"
-            app:lottie_cacheComposition="true"
+            app:lottie_rawRes="@raw/lottie_heart_crack"
+            style="@style/CP_HeartsLottieAnimation"
             />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/heartTwoLAV"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:lottie_rawRes="@raw/heartbreak"
-            app:lottie_asyncUpdates="enabled"
-            app:lottie_cacheComposition="true"
+            app:lottie_rawRes="@raw/lottie_heart_crack"
+            style="@style/CP_HeartsLottieAnimation"
             />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/heartThreeLAV"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:lottie_rawRes="@raw/heartbreak"
-            app:lottie_asyncUpdates="enabled"
-            app:lottie_cacheComposition="true"
+            app:lottie_rawRes="@raw/lottie_heart_crack"
+            style="@style/CP_HeartsLottieAnimation"
             />
     </LinearLayout>
+
+    <!-- Explosion AnimationView -->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/explosionLAV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        app:lottie_rawRes="@raw/lottie_explosion"
+        app:lottie_asyncUpdates="enabled"
+        app:lottie_cacheComposition="true"
+        android:visibility="gone" />
+
+    <!-- Skip AnimationView -->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/skipLAV"
+        android:layout_width="match_parent"
+        android:layout_height="340dp"
+        android:layout_centerInParent="true"
+        app:lottie_speed="2"
+        app:lottie_rawRes="@raw/lottie_skip" />
+
+    <!--Crown LAV-->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/crownLAV"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_toEndOf="@+id/currentScoreTV"
+        android:layout_alignTop="@+id/currentScoreTV"
+        android:layout_alignBottom="@id/currentScoreTV"
+        android:scaleType="centerInside"
+        app:lottie_rawRes="@raw/lottie_crown"
+        app:lottie_loop="true"
+        app:lottie_speed="0.7"
+        android:visibility="gone" />
+
+    <!-- CurrentScore View -->
+    <TextView
+        android:id="@+id/currentScoreTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:text="@string/initial_score"
+        android:textSize="40sp"
+        android:textAppearance="@style/default_font"
+        android:textColor="@color/beige"/>
+
+    <!-- BestScore View -->
+    <TextView
+        android:id="@+id/bestScoreTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/currentScoreTV"
+        android:text="@string/initial_best_score"
+        android:textSize="15sp"
+        android:textAppearance="@style/default_font"
+        android:textColor="@color/beige"/>
 
     <!-- Bomb RelativeLayout -->
     <RelativeLayout
@@ -278,18 +277,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         app:lottie_speed="2"
-        app:lottie_rawRes="@raw/game_over"/>
-
-    <!--Fire LAV-->
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/fireLAV"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_toEndOf="@+id/currentScoreTV"
-        android:layout_alignTop="@+id/currentScoreTV"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/puzzle_fire_animation"
-        android:visibility="gone"/>
+        app:lottie_rawRes="@raw/lottie_game_over"/>
 
     <!--Reset TextView-->
     <TextView
