--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -7,11 +7,6 @@
     android:clipToPadding="false"
     android:background="@color/background">
 
-    <com.airbnb.lottie.LottieAnimationView
-        app:lottie_rawRes="@raw/lottie_stars_background"
-        style="@style/BackgroundLottieAnimation"
-        />
-
     <!-- Flame AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/flameLAV"
@@ -26,7 +21,7 @@
 
     <!-- LetterBox Layout -->
     <GridLayout
-        android:id="@+id/gridLayout"
+        android:id="@+id/letterBoxGL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:rowCount="6"
@@ -138,14 +133,14 @@
             style="@style/letterBoxTextView"
             android:layout_row="2"
             android:layout_column="4"
-            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
 
         <EditText
             android:id="@+id/letterBoxR3C0EV"
             style="@style/letterBoxTextView"
             android:layout_row="3"
             android:layout_column="0"
-            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
 
         <EditText
             android:id="@+id/letterBoxR3C1EV"
@@ -159,7 +154,7 @@
             style="@style/letterBoxTextView"
             android:layout_row="3"
             android:layout_column="2"
-            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
 
         <EditText
             android:id="@+id/letterBoxR3C3EV"
@@ -229,7 +224,7 @@
             style="@style/letterBoxTextView"
             android:layout_row="5"
             android:layout_column="2"
-            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
 
         <EditText
             android:id="@+id/letterBoxR5C3EV"
@@ -249,7 +244,7 @@
 
     <!-- Keyboard Layout -->
     <LinearLayout
-        android:id="@+id/llKeyboard"
+        android:id="@+id/KeyboardLL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -405,7 +400,8 @@
                 android:background="@drawable/keyboard_keys_background"
                 android:src="@drawable/backspace"
                 android:onClick="keyboardClicked"
-                android:contentDescription="@string/image_description" />
+                android:contentDescription="@string/image_description"
+                android:stateListAnimator="@animator/pulse_animation" />
 
             <TextView
                 android:id="@+id/zTextView"
@@ -462,7 +458,8 @@
                 android:background="@drawable/keyboard_keys_background"
                 android:src="@drawable/enter"
                 android:onClick="keyboardClicked"
-                android:contentDescription="@string/image_description"/>
+                android:contentDescription="@string/image_description"
+                android:stateListAnimator="@animator/pulse_animation"/>
 
         </LinearLayout>
 
@@ -483,7 +480,7 @@
         android:id="@+id/skipLAV"
         android:layout_width="match_parent"
         android:layout_height="340dp"
-        android:layout_alignBottom="@+id/gridLayout"
+        android:layout_alignBottom="@+id/letterBoxGL"
         app:lottie_rawRes="@raw/lottie_skip" />
 
     <!-- Coin Blast AnimationView -->
@@ -535,7 +532,8 @@
             android:textAppearance="@style/default_font"
             android:textColor="@color/background"
             android:textSize="12sp"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+            android:stateListAnimator="@animator/pulse_animation" />
 
         <TextView
             android:id="@+id/streakTooltipTV"
@@ -559,10 +557,11 @@
         android:id="@+id/bombRL"
         android:layout_width="82dp"
         android:layout_height="33dp"
-        android:layout_above="@+id/llKeyboard"
-        android:layout_alignStart="@+id/llKeyboard"
+        android:layout_above="@+id/KeyboardLL"
+        android:layout_alignStart="@+id/KeyboardLL"
         android:layout_marginBottom="10dp"
-        android:onClick="onBombClick">
+        android:onClick="onBombClick"
+        android:stateListAnimator="@animator/pulse_animation" >
 
         <ImageView
             android:background="@drawable/ui_background"
@@ -592,10 +591,11 @@
         android:id="@+id/skipRL"
         android:layout_width="82dp"
         android:layout_height="33dp"
-        android:layout_above="@+id/llKeyboard"
+        android:layout_above="@+id/KeyboardLL"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:onClick="onSkipClick">
+        android:onClick="onSkipClick"
+        android:stateListAnimator="@animator/pulse_animation" >
 
         <ImageView
             android:background="@drawable/ui_background"
@@ -625,10 +625,11 @@
         android:id="@+id/hintRL"
         android:layout_width="82dp"
         android:layout_height="33dp"
-        android:layout_above="@+id/llKeyboard"
-        android:layout_alignEnd="@+id/llKeyboard"
+        android:layout_above="@+id/KeyboardLL"
+        android:layout_alignEnd="@+id/KeyboardLL"
         android:layout_marginBottom="10dp"
-        android:onClick="onHintClick">
+        android:onClick="onHintClick"
+        android:stateListAnimator="@animator/pulse_animation" >
 
         <ImageView
             android:background="@drawable/ui_background"
@@ -662,7 +663,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginStart="30dp"
         android:onClick="onCurrencyClick"
-        android:background="@drawable/border_background">
+        android:background="@drawable/border_background"
+        android:stateListAnimator="@animator/pulse_animation" >
 
 
         <ImageView
@@ -728,7 +730,8 @@
         android:layout_margin="70dp"
         android:onClick="handleResetClick"
         android:visibility="gone"
-        android:contentDescription="@string/image_description" />
+        android:contentDescription="@string/image_description"
+        android:stateListAnimator="@animator/pulse_animation" />
 
     <!-- Mid-Game Warning RelativeLayout -->
     <RelativeLayout
@@ -762,7 +765,8 @@
             android:textSize="20sp"
             android:textColor="@color/beige"
             android:textAppearance="@style/default_font"
-            android:onClick="handleLeaveButtons" />
+            android:onClick="handleLeaveButtons"
+            android:stateListAnimator="@animator/pulse_animation" />
 
         <Button
             android:id="@+id/popupStayB"
@@ -776,176 +780,15 @@
             android:textSize="20sp"
             android:textColor="@color/beige"
             android:textAppearance="@style/default_font"
-            android:onClick="handleLeaveButtons" />
+            android:onClick="handleLeaveButtons"
+            android:stateListAnimator="@animator/pulse_animation" />
 
 
-    </RelativeLayout>
+    </RelativeLayout>=
 
-    <!-- Shop RelativeLayout -->
-    <RelativeLayout
-        android:id="@+id/shopRL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="@drawable/popup_background"
-        android:padding="10dp"
-        android:visibility="gone">
+    <include
+        android:id="@+id/shop"
+        layout="@layout/shop_layout" />
 
-        <LinearLayout
-            android:id="@+id/shopLL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/ui_background">
-
-                <ImageView
-                    android:id="@+id/ivBuyBomb"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/bomb"
-                    android:contentDescription="@string/image_description" />
-
-                <TextView
-                    android:id="@+id/shopBombCountTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="5dp"
-                    android:textSize="12sp"
-                    android:textColor="@color/black"
-                    android:layout_alignBottom="@id/ivBuyBomb"
-                    android:layout_alignEnd="@+id/ivBuyBomb"
-                    android:layout_marginEnd="5dp"
-                    android:paddingHorizontal="5dp"
-                    android:background="@drawable/circle_background"
-                    android:textAppearance="@style/default_font"/>
-
-                <Button
-                    android:id="@+id/shopBombBuyB"
-                    android:tag="bomb"
-                    android:layout_width="80dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:text="@string/buy40"
-                    android:textSize="12sp"
-                    android:textColor="@color/black"
-                    android:textAppearance="@style/default_font"
-                    android:onClick="handleShopButtons"
-                    android:background="@drawable/keyboard_keys_background"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/ui_background">
-
-                <ImageView
-                    android:id="@+id/ivBuySkip"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/skip"
-                    android:contentDescription="@string/image_description" />
-
-                <TextView
-                    android:id="@+id/shopSkipCountTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="5dp"
-                    android:textSize="12sp"
-                    android:textColor="@color/black"
-                    android:layout_alignBottom="@id/ivBuySkip"
-                    android:layout_alignEnd="@+id/ivBuySkip"
-                    android:paddingHorizontal="5dp"
-                    android:background="@drawable/circle_background"
-                    android:textAppearance="@style/default_font"/>
-
-                <Button
-                    android:id="@+id/shopSkipBuyB"
-                    android:tag="skip"
-                    android:layout_width="80dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:text="@string/buy200"
-                    android:textSize="12sp"
-                    android:textColor="@color/black"
-                    android:textAppearance="@style/default_font"
-                    android:onClick="handleShopButtons"
-                    android:background="@drawable/keyboard_keys_background"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/ui_background">
-
-                <ImageView
-                    android:id="@+id/ivBuyHint"
-                    android:layout_width="40dp"
-                    android:layout_height="45dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/hint"
-                    android:contentDescription="@string/image_description" />
-
-                <TextView
-                    android:id="@+id/shopHintCountTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="5dp"
-                    android:textSize="12sp"
-                    android:textColor="@color/black"
-                    android:layout_alignBottom="@id/ivBuyHint"
-                    android:layout_alignEnd="@+id/ivBuyHint"
-                    android:paddingHorizontal="5dp"
-                    android:background="@drawable/circle_background"
-                    android:textAppearance="@style/default_font"/>
-
-                <Button
-                    android:id="@+id/shopHintBuyB"
-                    android:tag="hint"
-                    android:layout_width="80dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:text="@string/buy100"
-                    android:textSize="12sp"
-                    android:textColor="@color/black"
-                    android:textAppearance="@style/default_font"
-                    android:onClick="handleShopButtons"
-                    android:background="@drawable/keyboard_keys_background"/>
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/shopCloseBuyB"
-            android:tag="close"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:layout_below="@+id/shopLL"
-            android:layout_marginTop="30dp"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/exit_no"
-            android:text="@string/close"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:textAppearance="@style/default_font"
-            android:onClick="handleShopButtons"/>
-
-    </RelativeLayout>
 
 </RelativeLayout>
