--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -784,11 +784,10 @@
             android:stateListAnimator="@animator/pulse_animation" />
 
 
-    </RelativeLayout>=
+    </RelativeLayout>
 
     <include
         android:id="@+id/shop"
         layout="@layout/shop_layout" />
-
 
 </RelativeLayout>
