--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="yellow">#ffc107</color>
     <color name="green">#11e889</color>
     <color name="gold">#FFCC33</color>
+    <color name="blue">#6aa9ff</color>
+
 
 </resources>
